--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "react-webpack3-cli",
+  "version": "1.0.0",
+  "description": "",
+  "main": "webpack.config.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "react": "^16.4.0",
     "react-redux": "^5.0.7",
@@ -15,5 +22,15 @@
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^3.12.0",
     "webpack-dev-server": "^2.11.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MyNameDeXian/react-webpack3-cli.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MyNameDeXian/react-webpack3-cli/issues"
+  },
+  "homepage": "https://github.com/MyNameDeXian/react-webpack3-cli#readme"
 }
